--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+requests
 python-dotenv
 discord
 slack_sdk
@@ -7,4 +8,5 @@ fastapi
 uvicorn[standard]
 google
 google-cloud-firestore
+google-cloud-aiplatform
 firebase-admin
